# I4RemoteCamera

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: components.d.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  server.rs
src-tauri/webClient/: app.js  index.html  style.css
src/components/: AppSidebar.vue
src/layouts/: MainLayout.vue
src/models/: CameraSettings.ts
src/router/: index.ts
src/services/: CameraStreamService.ts
src/stores/: HomeStore.ts  useHomeStore.ts
src/viewmodels/: HomeViewModel.ts
src/views/: HomeView.vue  SettingsView.vue  SystemView.vue
