[package]
name = "i4-remote-camera"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "i4_remote_camera_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
local-ip-address = "0.6"
futures-util = "0.3"
env_logger = "0.10"
log = "0.4"
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
tower = { version = "0.4", features = ["util"] }
rustls-pki-types = "1"
axum-server = { version = "0.7", features = ["tls-rustls"] }

